margin sets to 95% when on mobile while also having a fixed footer

--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -1,9 +1,10 @@
 #footer {
   padding-top: 20px;
   position: relative;
-  width: 100%;
+  width: 85%;
   background-color: #e5e5e5;
   border-top: 1px solid #e4e4e4;
+  margin: 0 auto;
 }
 
 html {
@@ -18,6 +19,18 @@ body {
 
 #flex-content-container {
   flex: 1;
+  width: 85%;
+  margin: 0 auto;
+
+}
+
+@media(max-width: 480px) {
+  #flex-content-container {
+    width: 95%;
+  }
+  #footer {
+    width: 95%;
+  }
 }
 
 .footer-right {
